[package]
name = "fencryption"
description = "A program to encrypt and decrypt files and full directories"
authors = ["valflrt"]
license = "MIT"
repository = "https://github.com/valflrt/fencryption-rust"
version = "0.1.6"
edition = "2021"

[lib]
name = "fencryption_lib"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.1"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
human-duration = "0.1.0"
quit = "1.1.4"
rand = "0.8.5"
ring = "0.16.20"
rpassword = "7.1.0"
threadpool = "1.8.1"
uuid = { version = "1.2.1", features = ["v4"] }
