[package]
name = "fencryption"
description = "A program to encrypt/decrypt text, files and directories"
authors = ["valflrt"]
license = "MIT"
repository = "https://github.com/valflrt/fencryption-rust"
version = "0.1.13"
edition = "2021"

[lib]
name = "fencryption_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "fencryption"
path = "src/bin/fencryption/bin.rs"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
human-duration = "0.1.0"
rand = "0.8.5"
rmp-serde = "1.1.1"
rpassword = "7.1.0"
serde = { version = "1.0.*", features = ["derive"] }
sha2 = "0.10.6"
supports-color = "1.3.1"
threadpool = "1.8.1"
uuid = { version = "1.2.1", features = ["v4"] }
